VcBridge Initial commit

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -20,11 +20,13 @@ spring.h2.console.settings.web-allow-others=true
 
 
 
-spring.mail.host=mail.dimitris.biz
-spring.mail.port=465
-spring.mail.username=deploy@dimitris.biz
-spring.mail.password=XC&8gfXqNN*+?o#wKe
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=karadimas@gmail.com
+spring.mail.password=gchkvbaonxycqfss
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
-spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
