--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -28,16 +28,25 @@ vcbadmin.emailNotifications.waitAfterSubmission=15
 
 # spring-boot-starter-mail properties
 
-#spring.mail.host=smtp.mailgun.org
-#spring.mail.port=587
-#spring.mail.username=do-not-reply@sastix.com
-#spring.mail.password=a!Str-1-3-X2
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.socketFactory.fallback=false
-#spring.mail.properties.mail.smtp.socketFactory.port=587
+spring.mail.host=smtp.mailgun.org
+spring.mail.port=587
+spring.mail.username=do-not-reply@sastix.com
+spring.mail.password=a!Str-1-3-X2
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.socketFactory.port=587
 
 #timezone.default=Europe/Athens
 
 security.basic.enabled=false
 enable.oam=false
+
+
+###
+#   Teleconf-ui
+###
+teleconf-ui.protocol=http
+teleconf-ui.host=localhost
+teleconf-ui.port=8888
+teleconf-ui.path=
