--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=develop
+spring.profiles.active=docker
 
 server.port=8080
 #spring.datasource.driverClassName=org.postgresql.Driver
@@ -12,12 +12,7 @@ server.port=8080
 
 
 spring.mvc.static-path-pattern=/resources/**
-#openfire.test=dimis
-openfire.videobridgeHost=https://vc.sastix.com
-openfire.videobridgeEndpointPort=7443
-openfire.videobridgeAdminPort=9091
-openfire.authUsername=admin
-openfire.authPassword=systempass
+
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.thymeleaf.cache=false
