--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -1,6 +1,6 @@
 h2.db.file = d:\\opt\\csp\\vcbridge_db
 
-spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
