--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=docker
+
 server.port=8888
 server.servlet.context-path=/
 
@@ -29,7 +31,7 @@ jitsi.port=443
 security.basic.enabled=false
 h2.db.file = d:\\opt\\csp\\vcbridge_db
 
-spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
