SXCSP-260: Featuring actual dates in reports

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 regrep.basis.daily=true
 regrep.basis.weekly=true
 regrep.basis.monthly=true
-regrep.basis.quarterly=false
+regrep.basis.quarterly=true
 regrep.basis.yearly=true
 
 # Regular Reports Email object sender/recipient address
-regrep.from=<regrep@csp-athens.gr>
-regrep.to=<admin@csp-athens.gr>
+regrep.from=<sender-email>
+regrep.to=<recipient-email>
 
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * *
@@ -16,14 +16,17 @@ regrep.cron.monthly=0 0 9 1 * ?
 regrep.cron.quarterly=0 0 9 1 1/3 ?
 regrep.cron.yearly=0 0 9 1 JAN ?
 
+# Regular Reports date format in email message
+regrep.date.pattern=yyyy-MM-dd
+
 # elasticsearch instance settings
 es.protocol=http
-es.host=<docker.containers>
+es.host=<es.host>
 es.port=9200
 
 # spring.mail settings
 spring.mail.default-encoding=UTF-8
-spring.mail.host=<smtp.gmail.com>
+spring.mail.host=<smtp.server>
 spring.mail.username=<username>
 spring.mail.password=<password>
 spring.mail.port=587
@@ -41,5 +44,5 @@ th.email.template=plain-text
 th.email.logo=logo.png
 th.email.recipient=Administrator
 th.email.subject=Subject sample
-th.email.message=Message content text sample
+th.email.message=Here is the %s for the number of documents created %s %s.
 th.email.signature=Regular Reports Service
