added new testdata/TC_IMQ_Event_001.json testdata/TC_IMQ_Threat_001.json

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/csp-apps/rt/rt-adapter-emitter/testenv
