Jitsi backup conf from demo1-csp into deployments

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.profiles.active=docker
+spring.profiles.active=develop
 
 server.port=8080
+
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/vcbridge
 #spring.datasource.username=postgres
@@ -43,5 +46,5 @@ enable.oam=false
 ###
 teleconf-ui.protocol=http
 teleconf-ui.host=localhost
-teleconf-ui.port=8888
+teleconf-ui.port=9200
 teleconf-ui.path=
