--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.profiles.active=docker
+#spring.profiles.active=docker
 
-server.port=8888
+server.port=9200
 server.servlet.context-path=/
 
 ###
