Docker profile + FIXES

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -11,7 +11,7 @@ spring.datasource.validationQuery=SELECT 1
 
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
