--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
@@ -1,24 +1,31 @@
-h2.db.file = /opt/vcb/data/vcbdb
+#java -Xmx512m
+#-Dserver.port=9300
+#-Dh2.db.file=/opt/vcb/data/vcbdb
+#-Dteleconf-ui.protocol=https
+#-Dteleconf-ui.host=teleconf.debug.preprod.melicertes.eu
+#-Dteleconf-ui.port=443
+#-Dspring.mail.host=smtp.gmail.com
+#-Dspring.mail.port=587
+#-Dspring.mail.username=karadimas@gmail.com
+#-Dspring.mail.password=gchkvbaonxycqfss
+#-jar server.jar
+
 server.port=9300
+
+h2.db.file = /opt/vcb/data/vcbdb
 
 spring.mail.host=${XXXMAILSERVERHOSTXXX:smtp.mailgun.org}
 spring.mail.port=${XXXMAILSERVERPORTXXX:587}
 spring.mail.username=${XXXMAILUSERNAMEXXX:do-not-reply@sastix.com}
 spring.mail.password=${XXXMAILPASSWORDXXX:a!Str-1-3-X2}
 
-spring.mail.smtp.auth=true
-spring.mail.smtps.quitwait=false
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
-
 spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
 
 
 ###
-#   Teleconf-ui
+#   Teleconf
 ###
-teleconf-ui.protocol=http
-teleconf-ui.host=localhost
-teleconf-ui.port=8888
+teleconf-ui.protocol=https
+teleconf-ui.host=teleconf.debug.preprod.melicertes.eu
+teleconf-ui.port=443
 teleconf-ui.path=
