--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -1,21 +1,22 @@
-spring.profiles.active=develop
+#spring.profiles.active=docker
 
 server.port=8080
 
-spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+# DATASOURCE
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:h2:file:${h2.db.file};AUTO_SERVER=TRUE;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=16
+spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/vcbridge
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.show-sql=false
 
 
 spring.mvc.static-path-pattern=/resources/**
-
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.thymeleaf.cache=false
@@ -24,12 +25,14 @@ spring.thymeleaf.cache=false
 vcbadmin.maxTaskRetries=2
 vcbadmin.emailNotifications.waitAfterSubmission=15
 
-# spring-boot-starter-mail properties
 
+# spring-boot-starter-mail properties
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=do-not-reply@sastix.com
 spring.mail.password=a!Str-1-3-X2
+spring.mail.smtp.auth=true
+spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
@@ -48,3 +51,4 @@ teleconf-ui.protocol=http
 teleconf-ui.host=localhost
 teleconf-ui.port=9200
 teleconf-ui.path=
+
