--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
@@ -31,18 +31,20 @@ jitsi.port=443
 security.basic.enabled=false
 h2.db.file = d:\\opt\\csp\\vcbridge_db
 
-spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+# DATASOURCE
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:h2:file:${h2.db.file};AUTO_SERVER=TRUE;
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.testOnBorrow=true
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=16
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
