--- a/csp-apps/vcbridge/vcb-commons/pom.xml
+++ b/csp-apps/vcbridge/vcb-commons/pom.xml
@@ -77,6 +77,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
 
     </dependencies>
