--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
@@ -1,12 +1,12 @@
-server.port=9200
+server.port=9100
 h2.db.file = /opt/vcb/data/vcbdb
 
 
 ###
 #   Jitsi
 ###
-jitsi.protocol=https
-jitsi.host=vc.sastix.com
-jitsi.port=443
+vc.protocol=https
+vc.host=vc.debug.preprod.melicertes.eu
+vc.port=443
 
 
