Update pipeline.conf with spamhaus feed drop collector

--- a/deployment/docker/applications/intelmq/csp-config/pipeline.conf
+++ b/deployment/docker/applications/intelmq/csp-config/pipeline.conf
@@ -6,5 +6,58 @@
         "destination-queues": [
             "csp-rest-api-output-queue"
         ]
+    },
+    
+    "cymru-whois-expert": {
+        "source-queue": "cymru-whois-expert-queue",
+        "destination-queues": [
+            "file-output-queue"
+        ]
+    },
+    "deduplicator-expert": {
+        "source-queue": "deduplicator-expert-queue",
+        "destination-queues": [
+            "taxonomy-expert-queue"
+        ]
+    },
+    "file-output": {
+        "source-queue": "file-output-queue"
+    },
+    "gethostbyname-1-expert": {
+        "source-queue": "gethostbyname-1-expert-queue",
+        "destination-queues": [
+            "cymru-whois-expert-queue"
+        ]
+    },
+    "gethostbyname-2-expert": {
+        "source-queue": "gethostbyname-2-expert-queue",
+        "destination-queues": [
+            "cymru-whois-expert-queue"
+        ]
+    },
+    "spamhaus-drop-collector": {
+        "destination-queues": [
+            "spamhaus-drop-parser-queue"
+        ]
+    },
+    "spamhaus-drop-parser": {
+        "source-queue": "spamhaus-drop-parser-queue",
+        "destination-queues": [
+            "deduplicator-expert-queue"
+        ]
+    },
+    "taxonomy-expert": {
+        "source-queue": "taxonomy-expert-queue",
+        "destination-queues": [
+            "url2fqdn-expert-queue"
+        ]
+    },
+    "url2fqdn-expert": {
+        "source-queue": "url2fqdn-expert-queue",
+        "destination-queues": [
+            "gethostbyname-1-expert-queue",
+            "gethostbyname-2-expert-queue"
+        ]
     }
+
 }
