--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -44,8 +44,7 @@
         }
     },
     "deduplicator-expert": {
-        "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed 
-to be a duplicate.",
+        "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed to be a duplicate.",
         "group": "Expert",
         "module": "intelmq.bots.experts.deduplicator.expert",
         "name": "Deduplicator",
