--- a/deployment/docker/applications/intelmq/Dockerfile
+++ b/deployment/docker/applications/intelmq/Dockerfile
@@ -48,7 +48,7 @@ RUN apk update && \
   mkdir /scripts && \
   mkdir /run/apache2 && \
   #mkdir /tmp/intelmq-fileinput \
-  #chmod go+rw /tmp/intelmq-fileinput \
+  chmod go+rw /tmp/intelmq-fileinput \
   echo "DONE SUCCESSFULLY!"
 
 ADD scripts/run.sh /scripts/run.sh
