Update runtime.conf with host name of adapter csp-intelmq_adapter

--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -9,7 +9,7 @@
             "auth_token_name": "<token name>",
             "auth_type": "<http_basic_auth/http_header>",
             "hierarchical_output": false,
-            "host": "http://csp-imq-adapter:8081/intelmq/v1/emitter",
+            "host": "http://csp-intelmq_adapter:8081/intelmq/v1/emitter",
             "use_json": true
         }
     },
