--- a/deployment/docker/applications/intelmq/Dockerfile
+++ b/deployment/docker/applications/intelmq/Dockerfile
@@ -47,8 +47,8 @@ RUN apk update && \
   echo "root ALL=(intelmq) NOPASSWD: /usr/bin/intelmqctl" >> /etc/sudoers && \
   mkdir /scripts && \
   mkdir /run/apache2 && \
-  #mkdir /tmp/intelmq-fileinput \
-  chmod go+rw /tmp/intelmq-fileinput \
+  chmod og+rw -R /tmp/intelmq-fileinput/ \
+  chmod og+rw -R /opt/intelmq/var/lib/bots/file-output \
   echo "DONE SUCCESSFULLY!"
 
 ADD scripts/run.sh /scripts/run.sh
