--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -64,7 +64,7 @@
         "module": "intelmq.bots.outputs.file.output",
         "name": "File",
         "parameters": {
-            "file": "/opt/intelmq/var/lib/bots/file-output/events.txt",
+            "file": "/tmp/file-output/events.txt",
             "hierarchical_output": false
         }
     },
