MISP: fixes on proposals functionality

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -79,9 +79,11 @@ elastic.port=9200
 
 apache.camel.use.activemq=false
 
+logging.level.com.intrasoft.csp=DEBUG
+#logging.level.com.intrasoft.csp.misp=DEBUG
+
 #
 #logging.level.root=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
 #logging.level.com.intrasoft.csp.misp.MispAdapterEmitterApplication=DEBUG
-logging.level.com.intrasoft.csp.misp=DEBUG
