--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -50,6 +50,10 @@ installation.modules.directory=/opt/csp/modules
 installation.vhost.directory=/opt/csp/apache2/csp-sites
 
 
+installation.reqs.memoryInGB=46
+installation.reqs.diskFreeInGB=120
+installation.reqs.cpus=16
+
 ## flyway (initialization for db logging
 flyway.enabled=true
 flyway.check-location=true
