--- a/csp-apps/configuration/conf-commons/pom.xml
+++ b/csp-apps/configuration/conf-commons/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>il-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
