implemented installation requirements check / forced override via -Dinstallation.forced=true

--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -50,6 +50,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
             <artifactId>conf-client</artifactId>
