--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -49,9 +49,11 @@ installation.temp.directory=/opt/csp/downloads
 installation.modules.directory=/opt/csp/modules
 installation.vhost.directory=/opt/csp/apache2/csp-sites
 
-
+# memory, we put 2 GB less due to VM misreporting
 installation.reqs.memoryInGB=46
-installation.reqs.diskFreeInGB=120
+# disk, we put exact requirements
+installation.reqs.diskFreeInGB=800
+# cpus, we can detect, so here is the right value
 installation.reqs.cpus=16
 
 ## flyway (initialization for db logging
