--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -52,3 +52,13 @@ teleconf-ui.host=localhost
 teleconf-ui.port=9200
 teleconf-ui.path=
 
+
+###
+#  TC API
+###
+tc.protocol=http
+tc.host=tc.demo1-csp.athens.intrasoft-intl.private
+tc.port=8000
+tc.path=/api/v1
+tc.path.personcontacts=/personcontacts
+
