--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -53,6 +53,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
+			<version>25.0-jre</version>
 		</dependency>
 
         <dependency>
