--- a/csp-apps/vcbridge/vcb-commons/pom.xml
+++ b/csp-apps/vcbridge/vcb-commons/pom.xml
@@ -83,6 +83,12 @@
             <version>3.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
+
 
     </dependencies>
 
