--- a/deployment/docker/base-images/apache2/apache2/httpd.conf
+++ b/deployment/docker/base-images/apache2/apache2/httpd.conf
@@ -51,6 +51,7 @@ ServerRoot "/usr/local/apache2"
 #Listen 12.34.56.78:80
 #Listen 80
 Listen 7443
+Listen 5443
 
 #
 # Dynamic Shared Object (DSO) Support
