--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -1,22 +1,36 @@
-h2.db.file = d:\\opt\\csp\\vcbridge_db
+###
+#  DATA SOURCE
+###
 
+# PostgreSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/vcbridge
+#spring.datasource.username=csp
+#spring.datasource.password=QdkcIdtg27tAYoX1JXSC
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# H2
+h2.db.file = d:\\opt\\csp\\vcbridge_db
 spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.testOnBorrow=true
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-
-
-spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.h2.console.settings.web-allow-others=true
+
+
+
+spring.datasource.testOnBorrow=true
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 
 
 
