SXCSP-475 with TcClient and new CMM API

--- a/csp-apps/vcbridge/vcb-admin/pom.xml
+++ b/csp-apps/vcbridge/vcb-admin/pom.xml
@@ -24,6 +24,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>il-commons</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>il-client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>vcb-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
