--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -56,9 +56,23 @@ teleconf-ui.path=
 ###
 #  TC API
 ###
-tc.protocol=http
-tc.host=tc.demo1-csp.athens.intrasoft-intl.private
-tc.port=8000
-tc.path=/api/v1
-tc.path.personcontacts=/personcontacts
+#tc.protocol=http
+#tc.host=tc.demo1-csp.athens.intrasoft-intl.private
+#tc.port=8000
+#tc.path=/api/v1
+#tc.path.personcontacts=/personcontacts
 
+# Using properties for a mocked TC nodejs server you can start under dummyserver project
+# You can override them to what ever is applicable - see docker profile for our docker env
+app.tc.protocol = http
+app.tc.host = tc.demo1-csp.athens.intrasoft-intl.private
+app.tc.port = 8000
+app.tc.path.circles = /tc
+app.tc.path.teams = /tct
+app.tc.path.localcircle = /api/v1/ltc
+app.tc.path.contacts = /api/v1/contacts
+app.tc.path.teamcontacts = /api/v1/teamcontacts
+app.tc.path.personcontacts = /api/v1/personcontacts
+app.tc.client.ssl.enabled=false
+app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
+app.tc.client.ssl.jks.keystore.password = 123456
