--- a/csp-apps/integration-layer/il-client/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-client/src/main/resources/application.properties
@@ -18,6 +18,8 @@ tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 tc.path.localcircle = /api/v1/ltc
 tc.path.contacts = /api/v1/contacts
+tc.path.teamcontacts = /api/v1/teamcontacts
+tc.path.personcontacts = /api/v1/personcontacts
 
 
 anon.protocol = http
