--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -61,6 +61,8 @@ app.tc.path.circles = /tc
 app.tc.path.teams = /tct
 app.tc.path.localcircle = /api/v1/ltc
 app.tc.path.contacts = /api/v1/contacts
+app.tc.path.teamcontacts = /api/v1/teamcontacts
+app.tc.path.personcontacts = /api/v1/personcontacts
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = 123456
