--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
@@ -10,8 +10,22 @@
 #-Dspring.mail.password=gchkvbaonxycqfss
 #-jar server.jar
 
+###
+#  BASIC
+###
 server.port=9300
 
+
+###
+#  SECURITY
+###
+security.basic.enabled=false
+enable.oam=false
+
+
+###
+#  DATASOURCE
+###
 h2.db.file = /opt/vcb/data/vcbdb
 
 spring.mail.host=${XXXMAILSERVERHOSTXXX:smtp.mailgun.org}
@@ -24,7 +38,21 @@ spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
 ###
 #   Teleconf
 ###
-teleconf-ui.protocol=https
-teleconf-ui.host=teleconf.debug.preprod.melicertes.eu
-teleconf-ui.port=443
-teleconf-ui.path=
+teleconf.protocol=https
+teleconf.host=${VCB_TELECONF_DOMAIN}
+teleconf.port=443
+teleconf.path=
+
+
+###
+#  TC
+###
+app.tc.protocol = https
+app.tc.host = ${TC_LOCAL_DOMAIN}
+app.tc.port = 443
+app.tc.path.circles = ${TC_PATH_CIRCLES}
+app.tc.path.teams = ${TC_PATH_TEAMS}
+app.tc.path.personcontacts = ${TC_PATH_PERSONCONTACTS}
+app.tc.client.ssl.enabled=true
+app.tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+app.tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
