--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.maximum-pool-size=16
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 
@@ -44,13 +44,20 @@ security.basic.enabled=false
 enable.oam=false
 
 
+logging.level.com.intrasoft.csp=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
+
+
+
 ###
-#   Teleconf-ui
+#   Teleconf
 ###
-teleconf-ui.protocol=http
-teleconf-ui.host=localhost
-teleconf-ui.port=9200
-teleconf-ui.path=
+teleconf.protocol=http
+teleconf.host=localhost
+teleconf.port=9200
+teleconf.path=
 
 
 ###
