--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
@@ -1,4 +1,12 @@
+###
+#  BASIC
+###
 server.port=9100
+
+
+###
+#  DATASOURCE
+###
 h2.db.file = /opt/vcb/data/vcbdb
 
 
@@ -6,7 +14,7 @@ h2.db.file = /opt/vcb/data/vcbdb
 #   Jitsi
 ###
 vc.protocol=https
-vc.host=vc.debug.preprod.melicertes.eu
+vc.host=${JITSI_LOCAL_DOMAIN}
 vc.port=443
 
 
