--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.maximum-pool-size=16
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=validate
