env + dockercompose Jitsi

--- a/deployment/docker/applications/jitsi/docker-compose.yml
+++ b/deployment/docker/applications/jitsi/docker-compose.yml
@@ -1,38 +1,68 @@
-version: '2'
+version: '3'
 services: 
-  csp-jitsi:
-    image: csp-jitsiopenfire:1.0p2
-    domainname: ${LOCAL_DOMAIN}
-    hostname: csp-jitsi
-    container_name: csp-jitsi
-    env_file:
-      - .env
-    volumes:
-      - JitsiDataVolume:/usr/share/openfire
-    network_mode: "host"
-    ports:
-      - "7777:7777"
-      - "7443:7443"
-      - "5222:5222"
-      - "5223:5223"
-      - "9090:9090"
-      - "9091:9091"
-      - "5269:5269"
-      - "5000-5020:5000-5020/tcp"
-      - "5000-5020:5000-5020/udp"
-  vcbridge-server:
-    container_name: csp-vcbridge
-    depends_on:
-      - csp-jitsi
-    image: csp-jitsivcbridge:1.0p2
-    volumes:
-      - ./vc-bridge-admin-app.jar:/application.jar
-    env_file:
-      - .env
-    network_mode: "host"
-    ports:
-      - "8080:8080"
 
+  csp-jitsi:
+    image: csp-jitsimeet:1.0
+    container_name: csp-jitsi
+    dns:
+      - 8.8.8.8
+    env_file:
+      - .env
+    environment:
+      - DOMAIN=${JITSI_VC_DOMAIN}
+      - STUN=stun.ekiga.net
+      - BRIDGE_IP=${HOST_IP}
+      - BRIDGE_TCP_PORT=4443
+      - BRIDGE_UDP_PORT=10000
+    ports:
+      - 4443:4443
+      - 10000:10000/udp
+      - 10080:80
+    volumes:
+        - /opt/csp/logs/:/var/log/jitsi
+      
+      
+  vcb-admin:
+    image: csp-java8:1.0
+    container_name: csp-vcadm
+    domainname: ${LOCAL_DOMAIN}
+    hostname: csp-vcadm
+    env_file:
+        - .env
+    command: java -Xmx512m -Dspring.profiles.active=docker -jar server.jar
+    working_dir: /opt/csp
+    volumes:
+        - ./vcb-admin-3.6.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
+        - /opt/csp/logs/:/opt/csplogs
+        - SSLDatavolume:/opt/ssl/
+        - JitsiDataVolume:/opt/vcb/data
+    expose:
+        - 9300
+        
+        
+  vcb-teleconf:
+    image: csp-java8:1.0
+    container_name: csp-vcui
+    domainname: ${LOCAL_DOMAIN}
+    hostname: csp-vcui
+    env_file:
+        - .env
+    command: java -Xmx512m -Dspring.profiles.active=docker -jar server.jar
+    working_dir: /opt/csp
+    volumes:
+        - ./vcb-teleconf-3.6.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
+        - /opt/csp/logs/:/opt/csplogs
+        - JitsiDataVolume:/opt/vcb/data
+    expose:
+        - 9100
+        
 volumes:
     JitsiDataVolume:
       external: true
+    SSLDatavolume:
+        external: true
+        
+networks:
+  default:
+    external:
+      name: ${LOCAL_DOMAIN}
