--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -186,3 +186,4 @@ spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 security.basic.enabled=false
 
 enable.oam=true
+check.cspid.cert.header = CspId-Client-Certificate-Header
