Initial commit for stand-alone installer

--- a/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
@@ -24,10 +24,10 @@ spring.http.multipart.maxRequestSize=1512MB
 
 
 # DATA SOURCE
-spring.datasource.url=jdbc:postgresql://csp-postgres:${POSTGRES_DOCR_PORT}/${POSTGRES_DB_CFG}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:file:/opt/cfg/data/anondb;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
