--- a/deployment/docker/central/docker-compose.yml
+++ b/deployment/docker/central/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         image: csp-java8:1.0
         container_name: csp-cfg
         hostname: csp-cfg
-        command: java -Xmx512m -Dinstallation.forced=true -Dspring.profiles.active=docker -jar server.jar
+        command: java -Xmx512m -Dspring.profiles.active=docker -jar server.jar
         working_dir: /opt/csp
         environment:
             - CFG_DOCR_PORT=19090
@@ -24,16 +24,18 @@ services:
             - cfg
         container_name: csp-cfg-client
         hostname: csp-cfg-client
-        command: java -Xmx512m -Dspring.profiles.active=docker -jar server.jar
+        command: java -Xmx512m -jar server.jar
         working_dir: /opt/csp
         environment:
          - CONF_SERVER_HOST=csp-cfg
          - CONF_SERVER_PORT=19090
          - CONF_SERVER_PROTOCOL=http
+         - INSTALLATION_FORCED=true
         volumes:
             - ./conf-client-cspapp-3.6.0-SNAPSHOT.jar:/opt/csp/server.jar
 #            - /opt/csp/logs/:/opt/csplogs
             - ./cfg-client/data:/opt/cspinst/
+            - /var/run/docker.sock:/var/run/docker.sock
         ports:
             - 127.0.0.1:18080:18080
 
