--- a/deployment/docker/central/docker-compose.yml
+++ b/deployment/docker/central/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - ENABLE_OAM=false
         volumes:
             - ./conf-server-3.6.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
-#            - /opt/csp/logs/:/opt/csplogs
+            - /opt/csp/logs/:/opt/csplogs
             - ./cfg/data:/opt/cfg/data
         ports:
             - 127.0.0.1:19090:19090
@@ -33,10 +33,10 @@ services:
          - INSTALLATION_FORCED=true
          - SERVER_ADDRESS=0.0.0.0
         volumes:
-            - ./conf-client-cspapp-3.6.0-SNAPSHOT.jar:/opt/csp/server.jar
-#            - /opt/csp/logs/:/opt/csplogs
-            - ./cfg-client/data:/opt/cspinst/
             - /var/run/docker.sock:/var/run/docker.sock
+            - ./conf-client-cspapp-3.6.0-SNAPSHOT.jar:/opt/csp/server.jar
+            - ./cfg-client/data:/opt/cspinst/
+            - /opt/csp/:/opt/csp/
         ports:
             - 127.0.0.1:18080:18080
 
