--- a/deployment/docker/central/docker-compose.yml
+++ b/deployment/docker/central/docker-compose.yml
@@ -15,8 +15,8 @@ services:
             - ./conf-server-3.6.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
             - /opt/csp/logs/:/opt/csplogs
             - ./cfg/data:/opt/cfg/data
-        ports:
-            - 127.0.0.1:19090:19090
+        expose:
+            - 19090
 
     sa-cfg-client:
         image: csp-docker-java8:1.0
@@ -40,3 +40,7 @@ services:
         ports:
             - 127.0.0.1:18080:18080
 
+networks:
+  default:
+    external:
+      name: installer_net
