--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -14,6 +14,12 @@ spring.datasource.url=jdbc:h2:file:${client.h2.file};DB_CLOSE_ON_EXIT=FALSE;COMP
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=3
+# JPA / HIBERNATE
+spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
 # default is create-drop :D
