--- a/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
@@ -28,9 +28,13 @@ spring.datasource.url=jdbc:h2:file:/opt/cfg/data/anondb;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=3
 
 # JPA / HIBERNATE
-spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Spring database configuration
 spring.datasource.testOnBorrow=true
